--- a/style.css
+++ b/style.css
@@ -1,12 +1,78 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
 body {
   margin: 0;
   padding: 0;
+  color: hsl(0deg 0% 10%);
+  height: 100%;
 }
 
 /* Add styles here! */
+
+.max-width-wrapper {
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+header {
+  border-bottom: 5px solid hsl(0deg 0% 30%);
+}
+
+header p {
+  font-size: 1.25rem;
+  margin-bottom: 0;
+}
+
+.intro-chunk {
+  padding: 64px 16px 56px;
+  max-width: 350px;
+  line-height: 1.5;
+}
+
+h1 {
+  font-size: 2rem;
+  margin-top: 0;
+  margin-bottom: 48px;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+main {
+  background-color: hsl(0deg 0% 50%);
+  padding: 56px 0;
+}
+
+h2 {
+  margin-top: 0;
+}
+
+p {
+  line-height: 1.25;
+  margin-bottom: 0;
+}
+
+.card {
+  background-color: white;
+  padding: 16px;
+  border-bottom: 5px solid hsl(0deg 0% 30%);
+  margin-bottom: auto;
+}
+
+.card h2 {
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: 5px solid hsl(45deg, 100%, 40%);
+  width: fit-content;
+  padding: 16px;
+}
+
+.indented-heading {
+  margin-top: -8px;
+  margin-left: -25px;
+}
