--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   margin: 0;
   padding: 0;
   color: hsl(0deg 0% 10%);
+  background-color: hsl(0deg 0% 50%);
   height: 100%;
 }
 
@@ -20,6 +21,7 @@ body {
 }
 
 header {
+  background-color: white;
   border-bottom: 5px solid hsl(0deg 0% 30%);
 }
 
@@ -45,7 +47,6 @@ strong {
 }
 
 main {
-  background-color: hsl(0deg 0% 50%);
   padding: 56px 0;
 }
 
